refactor: replace generic map implementations with fastutil specialized maps